[package]
name = "betterstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="betterstore"
path="./src/lib.rs"

[[bin]]
name="server"
path="./src/bin/server.rs"

[[bin]]
name="client_test"
path="./src/bin/client_test.rs"

[dependencies]
actix = "0.13.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
tonic = "0.7.1"
prost = "0.10.1"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
chrono = "0.4.19"
rand = "0.8.5"
ring = "0.16.20"

[build-dependencies]
tonic-build = "0.7.0"
